--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <a class="nav-link" href="#">Press</a>
                 <a class="nav-link" href="#">New hires</a>
                 <a class="nav-link" href="#">About</a>
+                <a href="create-post.php">Create Post</a>
             </nav>
         </div>
     </div>
@@ -39,6 +40,7 @@
             <p class="lead blog-description">An example blog template built with Bootstrap.</p>
         </div>
     </div>
+
 </header>
 
 <main role="main" class="container">
